--- a/pom.xml
+++ b/pom.xml
@@ -1371,6 +1371,12 @@
             </dependency>
 
             <dependency>
+                <groupId>com.google.inject</groupId>
+                <artifactId>guice</artifactId>
+                <version>${guice.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
@@ -1934,6 +1940,7 @@
         <grizzly.client.version>1.13</grizzly.client.version>
         <grizzly2.version>2.4.0</grizzly2.version>
         <guava.version>18.0</guava.version>
+        <guice.version>4.2.0</guice.version>
         <hamcrest.version>1.3</hamcrest.version>
         <xmlunit.version>1.6</xmlunit.version>
         <hk2.version>2.5.0-b42</hk2.version>
